plugin/debug/asset/debug.scss
section.deft-debug {
	border-top: .5rem solid #000;
	background: repeating-linear-gradient(
			45deg,
			#252525,
			#252525 1rem,
			#3e3e3e 1rem,
			#3e3e3e 2rem
	);
	margin-top: 4%;
	padding: 2% 0;
	font-size: .75rem;

	+ section.deft-debug {
		margin-top: 0;
	}

	> div {
		position: relative;
		background-color: #000;
		border: .25rem solid #fff;
		margin: 1.5% auto;
		padding: 1.5%;
		max-width: 1200px;
		width: 90%;
		color: #efefef;

		table {
			width: 100%;
			overflow-x: scroll;

			td {
				padding: .2em;
				vertical-align: top;
				font-family: monospace;

				&:nth-child(odd) {
					text-align: right;
					font-weight: 700;
				}

				&:nth-child(even) {
					background-color: #3e3e3e;
					text-align: left;
				}



				table {
					box-sizing: border-box;
					width: 100%;
					border-collapse: separate;
					border-spacing: .125rem;
					background-color: #131313;
				}
			}
		}
	}

	.timeline {
		position: relative;
		min-height: 100px;
		overflow: hidden;
		> div {
			display: block;
			position: absolute;
			top: 0;
			left: 0;
			bottom: 0;
			width: .125em;
			box-sizing: content-box;
			background-color: red;
			//border: .125em solid #efefef;
		}
	}

	h2 {
		margin: 0;
		padding:  0;
	}

	h3, h4 {
		padding: 0;
		margin: 0;
		background-color: transparent;
	}

	h3 {
		position: relative;
		padding: .5rem;
		background-color: #3e3e3e;
	}

	h4 {
		margin: 10px 0;
	}

	section {
		&.collapsed {
			h3:before {
				content: '';
				position: absolute;
				top: 50%;
				right: .5rem;
				bottom: 0;
				width: 1rem;
				height: 1rem;
				border-radius: 50%;
				background-color: #999;
				transform: translate(0, -50%);
			}

			div.detail {
				display: none;
			}
		}

		&.expanded {
			div.detail {
				display: block;
			}
		}

		> div {
			margin: 1rem 0 0;
			border: .25em solid #ccc;
			+ div {
				margin-top: 0;
			}
		}
	}
}

